<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.klassenserver7b</groupId>
	<artifactId>danceinterpreter</artifactId>
	<version>3.10.1</version>

	<name>DanceInterpreter</name>
	<organization>
		<name>Klassenserver 7b</name>
		<url>https://github.com/klassenserver7b</url>
	</organization>
	<inceptionYear>2021</inceptionYear>
	<description>Tool to present a playlist for ballroom dancing</description>
	<url>https://github.com/klassenserver7b/DanceInterpreter</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<build>
		<plugins>
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>enforce-maven-3</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.8.0</version>
								</requireMavenVersion>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.7.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>
										de.klassenserver7b.danceinterpreter.Main
									</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<appendAssemblyId>false</appendAssemblyId>
							<finalName>
								${project.artifactId}-${project.version}-full
							</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>4.0.0-M13</version>
				<configuration>
					<outputDirectory>${project.build.directory}/mvn-site</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.3.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<show>private</show>
					<doclint>all,-missing</doclint>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>default-jar</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>de.dentrassi.maven</groupId>
				<artifactId>rpm</artifactId>
				<version>1.12.0</version>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>rpm</goal>
						</goals>
						<configuration>
							<group>Application/Misc</group>

							<!-- <skipSigning>true</skipSigning> -->
							<signature>
								<keyId>5CE28D6E4C26965B</keyId>
								<keyringFile>${user.home}/.gnupg/pubring.kbx</keyringFile>
								<!--suppress UnresolvedMavenProperty -->
								<passphrase>${gpg.passphrase}</passphrase>
								<hashAlgorithm>SHA256</hashAlgorithm>
								<skip>true</skip>
							</signature>

							<entries>
								<entry>
									<name>
										/opt/danceinterpreter/danceinterpreter.jar
									</name>
									<file>
										${project.build.directory}/${project.build.finalName}-full.jar
									</file>
								</entry>
								<entry>
									<name>
										/opt/danceinterpreter/danceinterpreter.sh</name>
									<file>
										${project.basedir}/src/scripts/danceinterpreter.sh</file>

									<user>root</user>
									<group>root</group>
									<mode>755</mode>
									<configuration>true</configuration>
								</entry>
								<entry>
									<name>
										/usr/share/applications/danceinterpreter.desktop
									</name>
									<file>
										${project.basedir}/src/deb/danceinterpreter.desktop</file>
								</entry>
								<entry>
									<name>
										/usr/share/pixmaps/danceinterpreter.png
									</name>
									<file>
										${project.basedir}/src/deb/danceinterpreter.png</file>
								</entry>
								<entry>
									<name>/usr/bin/danceinterpreter</name>
									<linkTo>
										/opt/danceinterpreter/danceinterpreter.sh</linkTo>
								</entry>
							</entries>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.vafer</groupId>
				<artifactId>jdeb</artifactId>
				<version>1.10</version>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>jdeb</goal>
						</goals>
						<configuration>
							<deb>
								${project.build.directory}/${project.artifactId}-${project.version}_all.deb</deb>
							<installDir>/opt/danceinterpreter/</installDir>
							<dataSet>
								<data>
									<src>
										${project.build.directory}/${project.build.finalName}-full.jar</src>
									<type>file</type>
									<dst>
										/opt/danceinterpreter/danceinterpreter.jar</dst>
								</data>
								<data>
									<src>
										${project.basedir}/src/scripts/danceinterpreter.sh</src>
									<type>file</type>
									<dst>
										/opt/danceinterpreter/danceinterpreter.sh</dst>
									<mapper>
										<type>perm</type>
										<filemode>755</filemode>
										<user>root</user>
										<group>root</group>
									</mapper>
								</data>
								<data>
									<type>link</type>
									<linkName>/usr/bin/danceinterpreter</linkName>
									<linkTarget>
										/opt/danceinterpreter/danceinterpreter.sh</linkTarget>
									<symlink>true</symlink>
								</data>
								<data>
									<src>
										${project.basedir}/src/deb/danceinterpreter.desktop</src>
									<type>file</type>
									<dst>
										/usr/share/applications/danceinterpreter.desktop</dst>
								</data>
								<data>
									<src>
										${project.basedir}/src/deb/danceinterpreter.png</src>
									<type>file</type>
									<dst>/usr/share/pixmaps/danceinterpreter.png</dst>
								</data>
							</dataSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.5.0</version>
				<executions>
					<execution>
						<id>danceinterpreter-exe</id>
						<phase>install</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<outfile>
								${project.build.directory}/${project.artifactId}-${project.version}.exe</outfile>
							<errTitle>Danceinterpreter - Error</errTitle>
							<jar>
								${project.build.directory}/${project.build.finalName}-full.jar</jar>
							<icon>${project.basedir}/src/main/resources/icon.ico</icon>
							<classPath>
								<mainClass>
									de.klassenserver7b.danceinterpreter.Main</mainClass>
								<addDependencies>true</addDependencies>
							</classPath>
							<chdir>.</chdir>
							<versionInfo>
								<fileVersion>${project.version}.0</fileVersion>
								<txtFileVersion>txt file version</txtFileVersion>
								<fileDescription>${project.name}</fileDescription>
								<!--suppress UnresolvedMavenProperty -->
								<copyright>${publisher}</copyright>
								<productVersion>${project.version}.0</productVersion>
								<txtProductVersion>
									${project.description}</txtProductVersion>
								<productName>${project.name}</productName>
								<internalName>${project.artifactId}</internalName>
								<!--suppress UnresolvedMavenProperty -->
								<originalFilename>
									${launch4j.starterName}</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.5.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<show>private</show>
					<doclint>all,-missing</doclint>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>dependency-updates-report</report>
							<report>plugin-updates-report</report>
							<report>property-updates-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>


	<repositories/>
	<dependencies>
		<dependency>
			<groupId>se.michaelthelin.spotify</groupId>
			<artifactId>spotify-web-api-java</artifactId>
			<version>8.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.mpatric</groupId>
			<artifactId>mp3agic</artifactId>
			<version>0.9.1</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.3.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.6</version>
		</dependency>
		<dependency>
			<groupId> com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.4.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.13</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
		</dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.11.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-transcoder -->
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-transcoder</artifactId>
			<version>1.17</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
</project>
